# faceapi

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: faceapi.Dockerfile  frontend.Dockerfile  run-faceapi.sh
faceapi/: __init__.py  main.py  schema.py  utils.py
faceapi/backend/: __init__.py  models.py  utils.py
frontend/: package-lock.json  package.json  tsconfig.eslint.json
frontend/faceapi-frontend/: eslintrc.js  package-lock.json  package.json
frontend/faceapi-frontend/src/: FaceApp.tsx  FaceAppBody.tsx
frontend/src/: FaceApp.tsx  FaceAppBody.tsx  SideBar.tsx  axiosconfig.ts  index.tsx
tests/: test_fastapi.py
