[tool.poetry]
name = "faceapi"
version = "0.1.0"
description = "FacePredict Web API"
authors = ["KAWAI Shun <shun@osstech.co.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typing = "^3.7.4"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
python-multipart = "^0.0.5"
face-recognition = "^1.3.0"
scikit-learn = "^0.24.1"

[tool.poetry.dev-dependencies]
poethepoet = "^0.9.0"
mypy = "^0.800"
flake8 = "^3.8.4"

[tool.poe.tasks]
runserver = "uvicorn faceapi.main:app --reload"
lint = {shell = "flake8 faceapi/; mypy faceapi/"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
